# llamagen

./: .gitignore  README.md  chat.py  kit.code-workspace  main.py  model_profiles.py  poetry.toml  prompting.py  pyproject.toml  refactor.py
chain/: main.py
localgen/: chat.py  main.py  model_profiles.py  prompting.py  streaming.py
