[tool.poetry]
name = "llamagen"
version = "0.1.0"
description = ""
authors = ["Peyton Walters <peyton@cockroachlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ctransformers = "^0.2.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
